/*
  dashboard

  No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

  The version of the OpenAPI document: 0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package ;

import public "models/dashboard_annotations_datasource.proto";

message DashboardAnnotationsList {

  int32 builtIn = 230959171;

  DashboardAnnotationsDatasource datasource = 495751102;

  // Whether annotation is enabled.
  bool enable = 225106559;

  // Whether to hide annotation.
  bool hide = 3202370;

  // Annotation icon color.
  string iconColor = 342694296;

  // Name of annotation.
  string name = 3373707;

  string type = 3575610;

  // Query for annotation data.
  string rawQuery = 490686848;

  int32 showIn = 366274303;

}
